--- a/gcfix/Cargo.toml
+++ b/gcfix/Cargo.toml
@@ -10,6 +10,8 @@ rayon = "1.11.0"
 crackle-kit = { git = "ssh://git@github.com/Crispy13/crackle-kit.git", features = ["bam"]}
 anyhow = "1.0.100"
 ndarray = "0.17.1"
+clap = { version = "4.5.53", features = ["derive"] }
+polars = "0.52.0"
 
 
 
@@ -29,3 +31,7 @@ inherits = "release"
 lto = true
 codegen-units = 1
 debug = false
+
+
+[[bin]]
+name="gc_count"
