--- a/gcfix/Cargo.toml
+++ b/gcfix/Cargo.toml
@@ -7,12 +7,13 @@ edition = "2024"
 numpy = "0.27.1"
 pyo3 = { version = "0.27.2", features = ["auto-initialize"] }
 rayon = "1.11.0"
-crackle-kit = { git = "ssh://git@github.com/Crispy13/crackle-kit.git", features = ["bam"]}
+crackle-kit = { git = "ssh://git@github.com/Crispy13/crackle-kit.git", features = [
+    "bam",
+] }
 anyhow = "1.0.100"
 ndarray = "0.17.1"
 clap = { version = "4.5.53", features = ["derive"] }
 # polars = {version = "0.51.*", features = ["lazy"]}
-
 
 
 [profile.dev]
@@ -34,4 +35,13 @@ debug = false
 
 
 [[bin]]
-name="gc_count"
+name = "gc_count"
+
+
+[dev-dependencies]
+criterion = "0.*"
+rand = "0.9.2"
+
+[[bench]]
+name = "bench"
+harness = false
