--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -19,6 +19,12 @@ jobs:
         
     steps:
     - uses: actions/checkout@v4
+
+    - name: Install System Dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libclang-dev llvm-dev libssl-dev
+          
     - name: Cache
       uses: actions/cache@v4
       with:
