--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,10 +1,10 @@
 name: Rust
 
 on:
-  push:
-    branches: [ "master", "rs_port" ]
   pull_request:
-    branches: [ "master", "rs_port" ]
+    branches: [ "master", ]
+  push:
+    branches: [ "master", ]
 
 env:
   CARGO_TERM_COLOR: always
@@ -33,8 +33,10 @@ jobs:
           ~/.cargo/git
           target
         key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+
     - name: Build
       run: cargo build --verbose
+      
     - name: Run tests
       run: cargo test --verbose
       
